Changed animations to come in from the left to avoid horizontal scroll.

--- a/styles/sass/_projects.scss
+++ b/styles/sass/_projects.scss
@@ -25,6 +25,7 @@ PROJECTS
     flex-direction: column;
     justify-content: center;
     visibility: hidden;
+    overflow-x: hidden;
     opacity: 0;
     position: absolute;
     top: 0;
@@ -32,11 +33,9 @@ PROJECTS
     bottom: 0;
     right: 0;
     padding: 5%;
-    transform: translateX(-100%); 
-    // when not translated it was causing automatic link clicks on mobile/touch devices.
-    // Also had to move it in from the left side because the overflow width was acting funny.
-    width: 0; 
-    // mobile only it was causing the dreaded horizontal scroll.
+    transform: translateX(-100%);
+    width: 0;
+    // Had to move animations to come in from the left to avoid horizontal scroll - mobile only
     border-radius: 10px;
     background-color: rgba($background-color-main, 0.8);
     z-index: 50;
