--- a/styles/sass/_widgets.scss
+++ b/styles/sass/_widgets.scss
@@ -1,4 +1,4 @@
-.to-top {
+.to-Top {
     position: fixed;
     right: 1rem;
     bottom: 1rem;
