--- a/styles/style.css
+++ b/styles/style.css
@@ -729,6 +729,7 @@ PROJECTS
       -ms-flex-pack: center;
           justify-content: center;
   visibility: hidden;
+  overflow-x: hidden;
   opacity: 0;
   position: absolute;
   top: 0;
@@ -912,7 +913,7 @@ footer p {
   text-align: center;
 }
 
-.to-top {
+.to-Top {
   position: fixed;
   right: 1rem;
   bottom: 1rem;
@@ -920,10 +921,10 @@ footer p {
   border-radius: 100%;
   background-color: rgb(128, 128, 128);
 }
-.to-top.hidden {
+.to-Top.hidden {
   display: none;
 }
-.to-top i {
+.to-Top i {
   position: absolute;
   top: 50%;
   left: 50%;
